# fluster

./: .gitignore  README.md  main.py  pyproject.toml
.claude/: reviewer.md
.claude/agents/: gitter.md  simplify-refactor.md
.specs/: 202503010629-spec.md  v0-202503010629-spec.md  v1-1-202503011454-spec.md  v1-202503011449-spec.md  v1-bugs-202603011902-spec.md
client/: README.md  drizzle.config.ts  package-lock.json  package.json
client/src/: app.css
client/src/lib/: cluster-colors.ts  format.ts  index.ts
client/src/lib/components/: Button.svelte  Card.svelte  ClusterDrawer.svelte  EmptyState.svelte  Input.svelte  ItemDrawer.svelte  Pill.svelte  ScatterPlot.svelte  SomGrid.svelte  (+1 more)
client/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
demo/: fetch_newsgroups.py
fluster/: __init__.py  cli.py  server.py
fluster/config/: plan.py  project.py  settings.py
fluster/db/: connection.py  delete_run.py  schema.py
fluster/jobs/: manager.py
fluster/llm/: client.py
fluster/pipeline/: cluster.py  critique.py  embed.py  exemplars.py  export.py  ingest.py  label.py  materialize.py  merge.py  reconcile.py  reduce.py  run.py
tests/: conftest.py  test_cli_commands.py  test_cluster.py  test_cluster_codebook.py  test_critique.py  test_db_connection.py  test_delete_run.py  test_embed.py  test_exemplars.py  test_export.py  test_ingest.py  test_init_project.py  test_jobs.py  test_label.py  test_llm.py  test_materialize.py  test_merge.py  test_plan.py  test_reconcile.py  test_reduce.py  test_reduce_som.py  test_run.py  test_schema.py  test_server.py
(+18 files in other folders)
