[project]
name = "fluster"
version = "0.1.0"
description = "Clustering for confused data. Structure, with receipts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "typer>=0.15",
    "pydantic>=2.10",
    "pyyaml>=6.0",
    "sqlite-vec>=0.1.6",
    "hdbscan>=0.8.40",
    "umap-learn>=0.5",
    "rich>=13.9",
    "sentence-transformers>=3.3",
    "openai>=1.59",
    "ollama>=0.4",
    "loguru>=0.7",
    "tqdm>=4.66",
    "einops>=0.8.2",
    "Pillow>=10.0",
    "timm>=1.0.25",
]

[project.scripts]
fluster = "fluster.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
